--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "plugins": ["react", "@typescript-eslint"],
     "rules": {
         "indent": ["error", "tab"],
-        "linebreak-style": ["error", "windows"],
+        "linebreak-style": 0,
         "quotes": ["error", "single"],
         "semi": ["error", "always"]
     }
