--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.3.4",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-simple-oauth2-login": "^0.5.4",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0",
