--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-simple-oauth2-login": "^0.5.4",
+    "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0",
