--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.4",
+    "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
